Changed to fit SEO and Accessibility standards

--- a/matthewlaw-portfolio/index.html
+++ b/matthewlaw-portfolio/index.html
@@ -4,11 +4,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>My Portfolio</title>
-    <meta
-      name="description"
-      content="The technical portfolio of trainee name"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
     <style>
       html {
@@ -50,11 +45,11 @@
     </header>
     <main class="container" tabindex="0">
       <div class="title">        
-        <img src="background.jpg"/>
+        <img src="background.jpg" alt="background image of a book, cup, coffee maker, tablet and magazines scatters around a table"/>
         <div class="text">
           <span>Hello;</span>
           <span>I'm Matthew. I am Learner Developer.</span>
-          <a id="down-arrow" href="#about">
+          <a id="down-arrow" href="#about" aria-label="continue">
             <i class="fa-solid fa-chevron-down" style="font-size:80px"></i>
           </a>
         </div>      
