--- a/matthewlaw-portfolio/index.html
+++ b/matthewlaw-portfolio/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>My Portfolio</title>
+    <meta
+      name="description"
+      content="The technical portfolio of trainee name"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
     <style>
       html {
